# satyros

./: README.md  asset-manifest.json  flake.nix  index.html  manifest.json  package.yaml  stack.yaml
haskell/: .gitignore  all.js  flake.nix  lib.js  out.frefs.js  out.frefs.json  out.js  out.stats  rts.js  satyros-ui-haskell.cabal
haskell/src/Satyros/: UI.hs
haskell/src/Satyros/Handler/: Clever.hs  Common.hs  Naive.hs  Type.hs
haskell/src/Satyros/UI/: Util.hs
javascript/: README.md  package-lock.json  package.json  tsconfig.json
javascript/public/: haskell  index.html
javascript/public/haskell/: out.frefs.js  out.frefs.json  out.stats
javascript/src/: App.tsx  ConversionTable.tsx  Simplification.tsx  Util.tsx  d3-force-limit.d.ts  global.d.ts  index.css  index.tsx  useSatyrosAPI.tsx
javascript/src/component/: App.css  App.tsx  BellmanFordGraph.tsx  ClauseDB.tsx  ConversionTable.tsx  Example1.tsx  Example2.tsx  Example3.tsx  Example4.tsx  Example5.tsx  Example6.tsx  Example7.tsx  Example8.tsx  Example9.tsx  ExampleTemplate.tsx  ImplicationGraph.tsx  Preprocess.css  Preprocess.tsx  PreprocessGraph.tsx  References.tsx  Section1.tsx  Section2.tsx  Section3.tsx  Section4.tsx  Simplification.tsx
javascript/src/hook/: useForceGraph.ts  useSatyrosAPI.ts  useSatyrosAPI1.ts
src/Satyros/: BellmanFord.hs  CNF.hs  DPLL.hs  DPLLQFIDL.hs  QFIDL.hs  Util.hs
src/Satyros/BellmanFord/: Effect.hs  IDLGraph.hs  Loop.hs  NegativeCycle.hs  Propagation.hs  Storage.hs  Store.hs
src/Satyros/CNF/: Clause.hs  Formula.hs  Literal.hs  Positivity.hs  Variable.hs
src/Satyros/DPLL/: Assignment.hs  BCP.hs  Backtrace.hs  Decision.hs  Effect.hs  State.hs  Storage.hs  StorageUtil.hs
src/Satyros/DPLL/Temp/: Test.hs
src/Satyros/QFIDL/: Conversion.hs  Expressed.hs  Expressible.hs  Variable.hs
static/css/: main.2f184a20.chunk.css  main.2f184a20.chunk.css.map  main.55fe4bb6.chunk.css  main.55fe4bb6.chunk.css.map  main.60166c6d.chunk.css  main.60166c6d.chunk.css.map  main.6096e018.chunk.css  main.6096e018.chunk.css.map
static/js/: 2.166e8962.chunk.js  2.166e8962.chunk.js.map  2.47fe35eb.chunk.js  2.47fe35eb.chunk.js.map  2.6afb937b.chunk.js  2.6afb937b.chunk.js.map  2.9536aeb8.chunk.js  2.9536aeb8.chunk.js.map  3.16451486.chunk.js  3.16451486.chunk.js.map  3.6c0ba9a2.chunk.js  3.6c0ba9a2.chunk.js.map  3.cd20da08.chunk.js  3.cd20da08.chunk.js.map  main.00c3d1af.chunk.js  main.00c3d1af.chunk.js.map  main.07e940b2.chunk.js  main.07e940b2.chunk.js.map  main.0b82fb68.chunk.js  main.0b82fb68.chunk.js.map  main.22ddb32b.chunk.js  main.22ddb32b.chunk.js.map  main.2ccfcc0a.chunk.js  main.2ccfcc0a.chunk.js.map  main.68b85235.chunk.js  main.68b85235.chunk.js.map  main.6f938bd6.chunk.js  main.6f938bd6.chunk.js.map  main.a1d644d1.chunk.js  main.a1d644d1.chunk.js.map  main.b610d03d.chunk.js  main.b610d03d.chunk.js.map  main.caa55383.chunk.js  main.caa55383.chunk.js.map  main.d4d72c29.chunk.js  main.d4d72c29.chunk.js.map  main.d662eb59.chunk.js  main.d662eb59.chunk.js.map  main.fdf1058c.chunk.js  main.fdf1058c.chunk.js.map  (+6 more)
test/: DPLL.hs  DPLLQFIDL.hs  Spec.hs
