cabal-version:      3.0
name:               satyros-ui-haskell
version:            0.1.0.0
synopsis:           UI component of Satyros library
category:           Language
homepage:           https://github.com/Ailrun/satyros#readme
bug-reports:        https://github.com/Ailrun/satyros/issues
author:             Junyoung/Clare Jang
maintainer:         jjc9310@gmail.com
copyright:          2021 Junyoung/Clare Jang
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/Ailrun/satyros

library
  exposed-modules:    Satyros.UI
  other-modules:
    Paths_satyros_ui_haskell
    Satyros.Handler.Clever
    Satyros.Handler.Naive
    Satyros.Handler.Type
    Satyros.UI.Util

  hs-source-dirs:     src
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StarIsType
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules
    -Wmonomorphism-restriction -Wpartial-fields -Wredundant-constraints
    -Wunused-type-patterns

  build-depends:
    , base        >=4.12    && <4.15
    , containers
    , extra
    , free
    , jsaddle
    , lens
    , mtl
    , random
    , satyros     ^>=0.3.1.4
    , vector

  default-language:   Haskell2010

executable satyros-ui
  main-is:            Main.hs
  hs-source-dirs:     bin
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StarIsType
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules
    -Wmonomorphism-restriction -Wpartial-fields -Wredundant-constraints
    -Wunused-type-patterns

  build-depends:
    , base                >=4.12 && <4.15
    , jsaddle
    , satyros-ui-haskell

  default-language:   Haskell2010

  if impl(ghcjs)
    build-depends: ghcjs-base
